# universal_language

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  FOR-AI.md  Intel Report_ White Paper - A Mathematical Proof of the Universal Language.docx.md  RAMIFICATIONS.md  README.md  README2.md  UL_WhitePaper-Part2.md  UL_WhitePaper_Part3.md  index.json  llms.txt
applications/: applications.md  future-research.md
experiments/: D2-completeness-challenge.md  D2-structural-predictions.md  README.md  qc-audit-report.md
foundations/: formal-foundations.md  formal-operations.md  independent-derivation.md  montague-homomorphism.md  paradigm.md  universal-language-derivation.md
ul-core/: CRITIQUE.md  (+3 more)
ul-forge/: .gitignore  Cargo.toml  Dockerfile  _write_app.py
ul-forge/.github/workflows/: ci.yml
ul-forge/bindings/python/: Cargo.toml  README.md  pyproject.toml
ul-forge/bindings/python/src/: lib.rs
ul-forge/bindings/python/tests/: test_ul_forge.py
ul-forge/crates/ul-api/: Cargo.toml
ul-forge/crates/ul-api/src/: lib.rs  main.rs  routes.rs
ul-forge/crates/ul-api/tests/: api_tests.rs
ul-forge/crates/ul-cli/: Cargo.toml
ul-forge/crates/ul-cli/src/: main.rs
ul-forge/crates/ul-core/: Cargo.toml
ul-forge/crates/ul-core/src/: composer.rs  distinguished.rs  error.rs  lexicon.rs  lib.rs  modal.rs  performative.rs  pragmatic.rs  validator.rs
ul-forge/crates/ul-core/src/parser/: ast.rs  deparser.rs  grammar.rs  mod.rs  transform.rs  ul_script.pest
ul-forge/crates/ul-core/src/renderer/: layout.rs  mod.rs  svg.rs  templates.rs
ul-forge/crates/ul-core/src/types/: edge.rs  gir.rs  mod.rs  node.rs  sort.rs
ul-forge/crates/ul-core/tests/: core_tests.rs  fixture_tests.rs  integration_tests.rs  parser_tests.rs  property_tests.proptest-regressions  property_tests.rs  renderer_tests.rs  snapshot_tests.rs  validator_tests.rs
ul-forge/crates/ul-core/tests/fixtures/canonical/: 01-existence.ul  03-quality.ul  09-connection.ul  10-boundary.ul  11-intersection.ul  12-containment.ul
ul-forge/crates/ul-core/tests/fixtures/edge-cases/: all-operators.ul  chained-connections.ul  deep-nesting.ul
ul-forge/crates/ul-core/tests/fixtures/invalid/: bad-angle.ul  dangling-edge.gir.json  double-arrow.ul  duplicate-node-id.gir.json  mismatched-braces.ul  unclosed-brace.ul
ul-forge/crates/ul-core/tests/snapshots/: snapshot_tests__gir_boundary.snap  snapshot_tests__gir_concept.snap  snapshot_tests__gir_connection.snap  snapshot_tests__gir_containment.snap  snapshot_tests__gir_existence.snap  snapshot_tests__gir_foundation.snap  snapshot_tests__gir_intersection.snap  snapshot_tests__gir_point.snap  snapshot_tests__gir_process.snap  snapshot_tests__gir_quality.snap  snapshot_tests__gir_relation.snap  snapshot_tests__gir_structure.snap  snapshot_tests__svg_boundary.snap  snapshot_tests__svg_concept.snap  snapshot_tests__svg_connection.snap  snapshot_tests__svg_containment.snap  snapshot_tests__svg_existence.snap  snapshot_tests__svg_foundation.snap  snapshot_tests__svg_intersection.snap  snapshot_tests__svg_point.snap  snapshot_tests__svg_process.snap  snapshot_tests__svg_quality.snap  snapshot_tests__svg_relation.snap  snapshot_tests__svg_structure.snap
ul-forge/crates/ul-game/: Cargo.toml
ul-forge/crates/ul-game/src/: analysis.rs  animation.rs  context.rs  cosmic.rs  difficulty.rs  evaluation.rs  hints.rs  lib.rs  modding.rs  scoring.rs  sequence.rs  types.rs
ul-forge/crates/ul-mcp/: Cargo.toml
ul-forge/crates/ul-mcp/src/: main.rs
ul-forge/crates/ul-transceiver/: Cargo.toml
ul-forge/crates/ul-transceiver/src/: codec.rs  lib.rs  message.rs
ul-forge/crates/ul-wasm/: .npmignore  Cargo.toml
ul-forge/crates/ul-wasm/src/: lib.rs
ul-forge/protocol/: README.md  ul-transceiver.schema.json
ul-forge/schemas/: gir.schema.json  openapi.yaml  ul-transceiver.schema.json
ul-forge/vscode-extension/: language-configuration.json  package-lock.json  package.json  tsconfig.json  ul-forge-0.1.0.vsix
ul-forge/vscode-extension/src/: extension.ts
ul-forge/vscode-extension/src/test/: runTest.ts
ul-forge/vscode-extension/src/test/suite/: extension.test.ts  index.ts
ul-forge/vscode-extension/syntaxes/: ul.tmLanguage.json
ul-forge/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
ul-forge/web/public/levels/: level-1.json  level-2.json  level-3.json  level-4.json  level-5.json
ul-forge/web/src/: App.tsx  index.css  wasm.d.ts
ul-forge/web/src/__tests__/: App.test.tsx  agent-pipeline.test.ts  agent-scenarios.test.ts  algebraic-depth.test.ts  composer.test.ts  core-integration.test.ts  core.test.ts  cross-operation.test.ts  deparser-characterization.test.ts  edge-adversarial.test.ts  invariant-laws.test.ts  perf.test.ts  rendering.test.ts  roundtrip-stress.test.ts  scifi-scenarios.test.ts  semantic-structural.test.ts  setup.ts  sort-boundary.test.ts  store.test.ts  teaching.test.ts  test-infra.test.ts  wasm-integration.test.ts  worker.test.ts
ul-forge/web/src/__tests__/helpers/: gir-fixtures.ts  gir-helpers.ts  wasm-mock.ts
ul-forge/web/src/components/: ErrorBoundary.tsx  ExerciseChecker.tsx  ExportButtons.tsx  OperationComposer.tsx  PracticeMode.tsx  ScriptEditor.tsx  StatusBar.tsx  SvgPreview.tsx  TemplatePalette.tsx  VisualCanvas.tsx
ul-forge/web/src/core/: index.ts
ul-forge/web/src/hooks/: useKeyboardShortcuts.ts  useLivePreview.ts
ul-forge/web/src/lang/: ul-script.ts
ul-forge/web/src/store/: editorStore.ts
ul-forge/web/src/workers/: wasm.worker.ts
(+467 files in other folders)
