[workspace]
members = [
    "crates/ul-core",
    "crates/ul-cli",
    "crates/ul-wasm",
    "crates/ul-api",
    "crates/ul-game",
    "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/Jthora/universal_language"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
