[package]
name = "ul-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tools for Universal Language"

[dependencies]
ul-core = { path = "../ul-core" }
ul-game = { path = "../ul-game" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
