[package]
name = "ul-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Universal Language: parser, validator, renderer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
pest = "2"
pest_derive = "2"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["json"] }
