[package]
name = "ul-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal Language game module for ProtoFusionGirl — WASM cosmic evaluation engine"

[lib]
crate-type = ["rlib"]

[dependencies]
ul-core = { path = "../ul-core" }
wasm-bindgen = "=0.2.99"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "=0.3.49"
