[package]
name = "ul-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server exposing Universal Language operations as AI-agent tools"

[[bin]]
name = "ul-mcp"
path = "src/main.rs"

[dependencies]
ul-core = { path = "../ul-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
